--- a/ios-chatting-app/ios-chatting-app/Base.lproj/Main.storyboard
+++ b/ios-chatting-app/ios-chatting-app/Base.lproj/Main.storyboard
@@ -471,10 +471,87 @@
             </objects>
             <point key="canvasLocation" x="5064" y="-281"/>
         </scene>
+        <!--통화-->
+        <scene sceneID="EHl-eN-Lar">
+            <objects>
+                <tableViewController id="LqB-bJ-jaI" customClass="CallTableViewController" customModule="ios_chatting_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="AI6-HE-KeD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CallTableViewCell" id="ILG-fi-j7I" customClass="CallTableViewCell" customModule="ios_chatting_app" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="70"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ILG-fi-j7I" id="Vgh-b3-gE8">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatarPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="K9n-eD-rT0">
+                                            <rect key="frame" x="16" y="10" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="LgW-bW-cco"/>
+                                                <constraint firstAttribute="height" constant="50" id="OA1-Iz-n1V"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPy-iL-oM5">
+                                            <rect key="frame" x="74" y="11" width="244" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="상태" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oBb-Ot-367">
+                                            <rect key="frame" x="74" y="38" width="244" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021/01/27" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Tt-Ca-xA5">
+                                            <rect key="frame" x="326" y="24.5" width="68" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="68" id="lzL-eV-1qg"/>
+                                                <constraint firstAttribute="height" constant="21" id="xZp-TE-4cY"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="0Tt-Ca-xA5" firstAttribute="trailing" secondItem="Vgh-b3-gE8" secondAttribute="trailingMargin" id="2bS-ja-jCS"/>
+                                        <constraint firstItem="0Tt-Ca-xA5" firstAttribute="leading" secondItem="BPy-iL-oM5" secondAttribute="trailing" constant="8" id="N8R-yf-MUw"/>
+                                        <constraint firstItem="BPy-iL-oM5" firstAttribute="top" secondItem="Vgh-b3-gE8" secondAttribute="topMargin" id="VfB-QV-gtl"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="oBb-Ot-367" secondAttribute="bottom" id="bVs-gM-spf"/>
+                                        <constraint firstItem="oBb-Ot-367" firstAttribute="leading" secondItem="K9n-eD-rT0" secondAttribute="trailing" constant="8" id="fgO-Qm-Ai1"/>
+                                        <constraint firstItem="BPy-iL-oM5" firstAttribute="leading" secondItem="K9n-eD-rT0" secondAttribute="trailing" constant="8" id="iLA-x6-gfp"/>
+                                        <constraint firstItem="0Tt-Ca-xA5" firstAttribute="centerY" secondItem="Vgh-b3-gE8" secondAttribute="centerY" id="ian-BY-Yl9"/>
+                                        <constraint firstItem="K9n-eD-rT0" firstAttribute="leading" secondItem="Vgh-b3-gE8" secondAttribute="leading" constant="16" id="pRc-JR-JNi"/>
+                                        <constraint firstItem="K9n-eD-rT0" firstAttribute="centerY" secondItem="Vgh-b3-gE8" secondAttribute="centerY" id="qLo-7W-1Uu"/>
+                                        <constraint firstItem="0Tt-Ca-xA5" firstAttribute="leading" secondItem="oBb-Ot-367" secondAttribute="trailing" constant="8" id="zwl-BS-rPP"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="avatarImageView" destination="K9n-eD-rT0" id="RbJ-N2-MCj"/>
+                                    <outlet property="dateLabel" destination="0Tt-Ca-xA5" id="Q1u-B4-BUr"/>
+                                    <outlet property="fullNameLabel" destination="BPy-iL-oM5" id="qmf-9q-gK5"/>
+                                    <outlet property="statusLabel" destination="oBb-Ot-367" id="CNT-Nc-vPa"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="LqB-bJ-jaI" id="KpP-ae-t7R"/>
+                            <outlet property="delegate" destination="LqB-bJ-jaI" id="2T2-He-veV"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="통화" id="uuO-Kb-z9i"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uJM-IT-O2g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4298.5507246376819" y="-1604.4642857142856"/>
+        </scene>
         <!--Contacts Table View Controller-->
         <scene sceneID="low-HF-eqY">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xIE-gy-7dw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tableViewController storyboardIdentifier="contactsView" id="fVA-2a-XfC" customClass="ContactsTableViewController" customModule="ios_chatting_app" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="yhc-9X-E7P">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -522,6 +599,7 @@
                         </connections>
                     </tableView>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xIE-gy-7dw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4299" y="-953"/>
         </scene>
@@ -758,6 +836,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
+                        <segue destination="DZw-XE-Q5C" kind="relationship" relationship="viewControllers" id="JIv-Kv-Vzx"/>
                         <segue destination="RTs-Jz-A79" kind="relationship" relationship="viewControllers" id="E2h-80-mxy"/>
                         <segue destination="HDX-DD-eXz" kind="relationship" relationship="viewControllers" id="hDq-Vv-kff"/>
                     </connections>
@@ -1745,6 +1824,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sbM-Lm-6K3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="6493" y="-954"/>
+        </scene>
+        <!--통화-->
+        <scene sceneID="Zeg-1v-MG0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DZw-XE-Q5C" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="통화" image="call" id="KlA-Ee-Ke3"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="E9d-17-EAt">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="LqB-bJ-jaI" kind="relationship" relationship="rootViewController" id="Gse-pR-jdM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oib-qe-Aht" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3445" y="-1604"/>
         </scene>
     </scenes>
     <resources>
